# EloPhanto

./: .dockerignore  .elophanto-prompt.md  .gitignore  AGENT_PROGRAM.md  AGENT_PROTOCOL.md  CHANGELOG.md  CODEX_INTEGRATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.kid  GOVERNANCE.md  HEARTBEAT.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  config.demo.yaml  config.yaml.bak  fly.toml  permissions.yaml  pyproject.toml  setup.sh  start.sh  update.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_workflow_request.md  feature_request.md  skill_proposal.md  workflow_request.yml
.github/workflows/: ci.yml
ai-chatbot-landing/: package-lock.json  package.json  tailwind.config.ts
ai-chatbot-landing/app/: globals.css  layout.tsx  page.tsx
ai-chatbot-landing/components/: cta-section.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  testimonials.tsx
bridge/browser/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
bridge/p2p/: .gitignore  README.md  go.mod  go.sum  host.go  main.go  relay.go  rpc.go
channels/: __init__.py  base.py  child_adapter.py  cli_adapter.py  discord_adapter.py  kid_agent_adapter.py  slack_adapter.py  telegram_adapter.py
cli/: __init__.py  affect_cmd.py  bootstrap_cmd.py  chat_cmd.py  company_cmd.py  config_cmd.py  daemon_cmd.py  doctor_cmd.py  drafts_cmd.py  gateway_cmd.py  goals_cmd.py  help_cmd.py  init_cmd.py  kid_cmd.py  main.py  mcp_cmd.py  mission_cmd.py  polymarket_cmd.py  role_cmd.py  rollback_cmd.py  schedule_cmd.py  skills_cmd.py  stop_cmd.py  strategy_cmd.py  telegram_cmd.py  themes_cmd.py  update_cmd.py  vault_cmd.py  voice_cmd.py
cli/dashboard/: __init__.py  app.py  mascot.py  theme.py
cloud/: __init__.py  provision.py
companies/elophanto-self/: company.yaml
core/: __init__.py  action_queue.py  affect.py  affect_content_inference.py  agent.py  agent_identity.py  approval_queue.py  authority.py  autonomous_mind.py  browser_executor.py  browser_manager.py  capability_audit.py  census.py  codex_adapter.py  company.py  config.py  consumer_filter.py  context_compressor.py  context_store.py  database.py  dataset_builder.py  desktop_controller.py  document_processor.py  document_store.py  dream_journal.py  ego.py  email_monitor.py  embeddings.py  execution_context.py  executor.py  fingerprint.py  gateway.py  goal_manager.py  goal_runner.py  godmode.py  heartbeat.py  hub.py  identity.py  indexer.py  injection_guard.py  (+64 more)
core/payments/: __init__.py  audit.py  fiat_stripe.py  limits.py  local_wallet.py  manager.py  request_tracker.py  solana_wallet.py
db/: schema.sql
docs/: 01-PROJECT-OVERVIEW.md  02-ARCHITECTURE.md  03-TOOLS.md  04-SELF-DEVELOPMENT.md  05-KNOWLEDGE-SYSTEM.md  06-LLM-ROUTING.md  07-SECURITY.md  08-BROWSER.md  09-PROJECT-STRUCTURE.md  10-ROADMAP.md  11-TELEGRAM.md  12-INSTALLER.md  13-GOAL-LOOP.md  13-SKILLS.md  14-SELF-LEARNING.md  15-PAYMENTS.md  16-DOCUMENT-ANALYSIS.md  17-IDENTITY.md  18-EMAIL.md  19-SKILL-SECURITY.md  20-HOSTED-PLATFORM.md  21-AGENT-CENSUS.md  22-RECOVERY-MODE.md  23-MCP.md  24-VERIFICATION.md  25-AGENT-SWARM.md  26-AUTONOMOUS-MIND.md  27-SECURITY-HARDENING.md  28-REMOTION.md  29-AGENT-ORGANIZATION.md  30-QUICKSTART.md  31-WEB-DEPLOYMENT.md  32-AGENT-COMMUNE.md  33-OSWORLD.md  35-REPLICATE-IMAGE-GENERATION.md  36-TOOL-PROFILES.md  37-AUTONOMOUS-EXPERIMENTATION.md  38-SESSION-SEARCH.md  39-CODE-EXECUTION-SANDBOX.md  40-ENHANCED-SKILL-SECURITY.md  (+46 more)
docs/proposals/: HOSTED-DESKTOP.md  REMOTE-BROWSER.md
infra/relay/: README.md  elophanto-relay.service  install.sh
knowledge/organization-roles/: design-brand-guardian.md  design-image-prompt-engineer.md  design-inclusive-visuals-specialist.md  design-ui-designer.md  design-ux-architect.md  design-ux-researcher.md  design-visual-storyteller.md  design-whimsy-injector.md  engineering-ai-engineer.md  engineering-autonomous-optimization-architect.md  engineering-backend-architect.md  engineering-data-engineer.md  engineering-devops-automator.md  engineering-frontend-developer.md  engineering-mobile-app-builder.md  engineering-rapid-prototyper.md  engineering-security-engineer.md  engineering-senior-developer.md  engineering-technical-writer.md  marketing-app-store-optimizer.md  marketing-content-creator.md  marketing-growth-hacker.md  marketing-instagram-curator.md  marketing-reddit-community-builder.md  marketing-social-media-strategist.md  marketing-tiktok-strategist.md  marketing-twitter-engager.md  marketing-wechat-official-account.md  marketing-xiaohongshu-specialist.md  marketing-zhihu-strategist.md  product-behavioral-nudge-engine.md  product-feedback-synthesizer.md  product-sprint-prioritizer.md  product-trend-researcher.md  project-management-experiment-tracker.md  project-management-project-shepherd.md  project-management-senior.md  project-management-studio-operations.md  project-management-studio-producer.md  spatial-macos-spatial-metal-engineer.md  (+35 more)
knowledge/system/: architecture.md  capabilities.md  changelog.md  conventions.md  data-reference.md  icps.md  identity.md  known-limitations.md  local-artifact-viewing.md  remotion-video-creation.md  styleguide.md
misc/screenshots/: browser-demo.html  terminal-demo.html
plugins/: __init__.py
plugins/_template/: README.md  plugin.py  schema.json  test_plugin.py
plugins/replicate_generate/: README.md  plugin.py  schema.json  test_plugin.py
profiles/: README.md  developer.yaml  marketer.yaml  minimal.yaml  researcher.yaml  trader.yaml
roles/: ceo.yaml  marketing.yaml  ops.yaml  sales.yaml  support.yaml
skills/: SKILL_GUIDE.md
skills/12-principles-of-animation/: SKILL.md
skills/_template/: SKILL.md
sotogrande-polo-website/: README.md  package-lock.json  package.json
tests/: conftest.py
tools/: __init__.py  base.py  manifest.json  mcp_adapter.py  mcp_manage.py
vscode-extension/: .vscodeignore  package-lock.json  package.json
web/: components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
(+599 files in other folders)
