[project]
name = "elophanto"
version = "0.1.0"
description = "A self-evolving AI agent that acts as a personal AI operating system"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Petr Royce" },
]
dependencies = [
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sqlite-vec>=0.1.1",
    "playwright>=1.48.0",
    "apscheduler>=3.10.0",
    "cryptography>=42.0",
    "aiogram>=3.0",
    "websockets>=13.0",
    "pymupdf>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "ebooklib>=0.18",
    "charset-normalizer>=3.3.0",
    "agentmail>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.13",
]
payments = [
    "eth-account>=0.13.0",
]
payments-cdp = [
    "coinbase-agentkit>=0.7.4",
]

[project.scripts]
elophanto = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/0xroyce/EloPhanto"
Repository = "https://github.com/0xroyce/EloPhanto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "cli", "channels", "knowledge", "plugins", "skills"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["plugins/_template/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # Line too long — handled by formatter, not linter
    "E402",  # Module-level import not at top — deferred imports are intentional
]

[tool.ruff.lint.isort]
known-first-party = ["core", "tools", "cli", "channels", "plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "core.agent"
disable_error_code = ["attr-defined", "arg-type", "assignment"]

[[tool.mypy.overrides]]
module = "core.telegram"
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = "core.document_processor"
disable_error_code = ["attr-defined"]
